deploy/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: auth-service
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/cec-microservices-microservices-network: "true"
        io.kompose.service: auth-service
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: postgres
            - name: DB_NAME
              value: auth_db
            - name: DB_PORT
              value: "5432"
            - name: DB_SSLMODE
              value: disable
            - name: DB_USER
              value: postgres
            - name: JWT_EXPIRATION_HOURS
              value: "24"
            - name: JWT_ISSUER
              value: cec-auth-service
            - name: JWT_SECRET_KEY
              value: aayus
          image: ash784/cec-microservices:cec-microservices-auth-service-v1.0
          name: auth-service
          ports:
            - containerPort: 50051
          resources: {}
      restartPolicy: Always
status: {}
