deploy/cart-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: cart-service
  name: cart-service
spec:
  ports:
    - name: "50053"
      port: 50053
      targetPort: 50053
  selector:
    io.kompose.service: cart-service
status:
  loadBalancer: {}
