deploy/delivery-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: delivery-service
  name: delivery-service
spec:
  ports:
    - name: "50054"
      port: 50054
      targetPort: 50054
  selector:
    io.kompose.service: delivery-service
status:
  loadBalancer: {}
