deploy/product-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: product-service
  name: product-service
spec:
  ports:
    - name: "50052"
      port: 50052
      targetPort: 50052
  selector:
    io.kompose.service: product-service
status:
  loadBalancer: {}
